# coda-frontier

./: .eslintrc  .gitignore  .gitmodules  Procfile  README.md  config-overrides.js  generate_api_typings.py  package-lock.json  package.json  postcss.config.js  tailwind.config.js  translation_tool.py  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: main.yml
app/: electron.js  index.js  package.json
extras/: _dev_translation_tool.py
public/: index.html  manifest.json
scripts/: build.js  generate_api_typings.py  generate_background_export.py  generate_licenses.js  translation_tool.py
src/: RootProvider.tsx  api.d.ts  decl.d.ts  electron-wait-wpd.js  electron.js  index.css  index.tsx  transitions.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_builder.rs  main.rs  rpc.rs
src/assets/: _name_shuffler.py  api.json
src/common/: BackgroundWrapper.tsx  CrossfadeImage.tsx  NoBackgroundReplacement.tsx
src/components/: ActivityIndicator.tsx  Badge.tsx  ClassicPanel.tsx  CommonButton.tsx  CommonInput.tsx  DefaultPopup.tsx  DesktopHeader.tsx  HintWithLinkAfter.tsx  Popuper.tsx  Taskbar.tsx  Terminal.tsx  TextTime.tsx
src/data/: api.json  licenses.md  version.json
src/function/: ApiWrapper.ts  AsyncUtils.ts  BackgroundImages.ts  BadgeImages.ts  Cache.ts  DiscordRpc.ts  Gateway.ts  GatewayWrapper.ts  LinkOpener.ts  RankImages.ts  SilentSettings.ts  Soundtrack.ts  Toaster.tsx  Utils.ts
src/i18n/: i18n.ts
src/pages/: Banned.tsx  Dashboard.tsx  Loader.tsx  LogIn.tsx  (+3 more)
(+27 files in other folders)
