[package]
name = "coda"
version = "0.1.0"
description = "A speed programming game where you have to solve problems to try and eliminate other people."
authors = ["liquiddevelopmentnet"]
license = "MIT"
repository = "https://github.com/coda-game/frontier"
default-run = "coda"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
discord-sdk = "^0.3.0"
anyhow = "1.0"
tokio = { version = "1.8.2", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
windows = "0.40.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
